--- a/default.config.yml
+++ b/default.config.yml
@@ -211,6 +211,7 @@ projects: []
 
 # Glob pattern to ansible task files to run after all other tasks are finished.
 post_provision_tasks:
+  - tasks/post/chrome.yml
   - tasks/post/curl.yml
   - tasks/post/dotfiles.yml
   - tasks/post/tower.yml
