--- a/tasks/osx/activity_monitor.yml
+++ b/tasks/osx/activity_monitor.yml
@@ -8,3 +8,9 @@
 
 - name: Show all processes in Activity Monitor
   command: defaults write com.apple.ActivityMonitor ShowCategory -int 0
+
+- name: Sort Activity Monitor results by CPU usage (1)
+  command: defaults write com.apple.ActivityMonitor SortColumn -string "CPUUsage"
+
+- name: Sort Activity Monitor results by CPU usage (2)
+  command: defaults write com.apple.ActivityMonitor SortDirection -int 0
