--- a/tasks/osx/screen.yml
+++ b/tasks/osx/screen.yml
@@ -9,7 +9,7 @@
 - name: Save screenshots to the desktop
   command: defaults write com.apple.screencapture location -string "${HOME}/Desktop"
 
-- name: Save screenshots in PNG format (other options: BMP, GIF, JPG, PDF, TIFF)
+- name: Save screenshots in PNG format (other options BMP, GIF, JPG, PDF, TIFF)
   command: defaults write com.apple.screencapture type -string "png"
 
 - name: Disable shadow in screenshots
