--- a/tasks/posts/transmission.yml
+++ b/tasks/posts/transmission.yml
@@ -11,8 +11,8 @@
   command: defaults write org.m0k.transmission {{ item.key }} -bool {{ item.value }}
   with_items:
     - { name: "Keep incomplete downloads", key: "UseIncompleteDownloadFolder", value: "true" }
-    - { name: "Don't prompt for confirmation before downloading (1)", key: "DownloadAsk", value: "false" }
-    - { name: "Don't prompt for confirmation before downloading (2)", key: "MagnetOpenAsk", value: "false" }
+    - { name: "Don't prompt for confirmation before downloading (1/2)", key: "DownloadAsk", value: "false" }
+    - { name: "Don't prompt for confirmation before downloading (2/2)", key: "MagnetOpenAsk", value: "false" }
     - { name: "Trash original torrent files", key: "DeleteOriginalTorrent", value: "true" }
     - { name: "Hide the donate message", key: "WarningDonate", value: "false" }
     - { name: "Hide the legal disclaimer", key: "WarningLegal", value: "false" }
