--- a/tasks/osx/general_ui_ux.yml
+++ b/tasks/osx/general_ui_ux.yml
@@ -1,67 +1,30 @@
 ---
-# - name: Configure scrollbars
-#   osx_defaults:
-#     domain: NSGlobalDomain
-#     key: AppleShowScrollBars
-#     type: string
-#     # Options: "Always", "Automatic", "WhenScrolling"
-#     value: "WhenScrolling"
-#
+# - name: Configure scrollbars. Options "Always", "Automatic", "WhenScrolling"
+#   command: defaults write NSGlobalDomain AppleShowScrollBars -string "WhenScrolling"
+
 # - name: Minimize window when double-clicking its title bar
-#   osx_defaults:
-#     key: AppleActionOnDoubleClick
-#     type: string
-#     value: "Minimize"
+#   command: defaults write NSGlobalDomain AppleActionOnDoubleClick -string Minimize
 
 - name: Expand save panel by default
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: NSNavPanelExpandedStateForSaveMode
-    type: bool
-    value: true
+  command: defaults write NSGlobalDomain NSNavPanelExpandedStateForSaveMode -bool true
 
 - name: Expand print panel by default
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: PMPrintingExpandedStateForPrint
-    type: bool
-    value: true
-  notify:
-    - killall
+  command: defaults write NSGlobalDomain PMPrintingExpandedStateForPrint -bool true
 
-# - name: Save to disk (not to iCloud) by default
-#   osx_defaults:
-#     domain: NSGlobalDomain
-#     key: NSDocumentSaveNewDocumentsToCloud
-#     type: bool
-#     value: false
-#   notify:
-#     - killall
+- name: Save to disk (not to iCloud) by default
+  command: defaults write NSGlobalDomain NSDocumentSaveNewDocumentsToCloud -bool false
 
 - name: Automatically quit printer app once the print jobs complete
-  osx_defaults:
-    domain: com.apple.print.PrintingPrefs
-    key: "Quit When Finished"
-    type: bool
-    value: true
+  command: defaults write com.apple.print.PrintingPrefs "Quit When Finished" -bool true
 
 # - name: Disable the “Are you sure you want to open this application?” dialog
-#   osx_defaults:
-#     domain: com.apple.LaunchServices
-#     key: LSQuarantine
-#     type: bool
-#     value: false
+#   command: defaults write com.apple.LaunchServices LSQuarantine -bool false
 
 # - name: Remove duplicates in the “Open With” menu
 #   command: /System/Library/Frameworks/CoreServices.framework/Frameworks/LaunchServices.framework/Support/lsregister -kill -r -domain local -domain system -domain user
 
 - name: Reveal IP address, hostname, OS version, etc. when clicking the clock in the login window
   command: defaults write /Library/Preferences/com.apple.loginwindow AdminHostInfo HostName
-#   osx_defaults:
-#     domain: /Library/Preferences/com.apple.loginwindow
-#     key: AdminHostInfo
-#     type: string
-#     value: HostName
   become: true
 
 # - name: Restart automatically if the computer freezes
@@ -69,18 +32,10 @@
 #   become: true
 
 - name: Disable smart quotes as they're annoying when typing code
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: NSAutomaticQuoteSubstitutionEnabled
-    type: bool
-    value: false
+  command: defaults write NSGlobalDomain NSAutomaticQuoteSubstitutionEnabled -bool false
 
 - name: Disable smart dashes as they're annoying when typing code
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: NSAutomaticDashSubstitutionEnabled
-    type: bool
-    value: false
+  command: defaults write NSGlobalDomain NSAutomaticDashSubstitutionEnabled -bool false
 
 # - name: Disable Notification Center
 #   command: launchctl unload -w /System/Library/LaunchAgents/com.apple.notificationcenterui.plist 2> /dev/null
@@ -91,15 +46,7 @@
 #   command: launchctl unload /System/Library/LaunchAgents/com.apple.gamed.plist 2> /dev/null
 
 # - name: Reduce transparency
-#   osx_defaults:
-#     domain: com.apple.universalaccess
-#     key: reduceTransparency
-#     type: bool
-#     value: true
+#   command: defaults write com.apple.universalaccess reduceTransparency -bool true
 
 # - name: Set interface style to Dark
-#   osx_defaults:
-#     domain: NSGlobalDomain
-#     key: AppleInterfaceStyle
-#     type: string
-#     value: Dark
+#   command: defaults write NSGlobalDomain AppleInterfaceStyle -string "Dark"
