--- a/tests/config.yml
+++ b/tests/config.yml
@@ -7,7 +7,6 @@ homebrew_installed_packages:
   - wget
 
 homebrew_cask_apps:
-  - firefox
   - google-chrome
-  - macvim
+  - tower
   - transmission
