--- a/tasks/osx/app_store.yml
+++ b/tasks/osx/app_store.yml
@@ -47,6 +47,6 @@
     - name: Turn on app auto-update
       key: AutoUpdate
       value: true
-    - name: Allow the App Store to reboot machine on macOS updates
-      key: AutoUpdateRestartRequired
-      value: true
+    # - name: Allow the App Store to reboot machine on macOS updates
+    #   key: AutoUpdateRestartRequired
+    #   value: true
