--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,5 @@
 [defaults]
-roles_path = ./roles:/etc/ansible/roles
-
-[ssh_connection]
-pipelining = True
-control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+gathering = smart
+inventory = ./inventory.yml
+log_path = ./ansible.log
+roles_path = roles/external:roles/internal
