--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,10 @@
 ---
-- hosts: all
+- name: macOS Setup
+  hosts: all
   connection: local
+#   gather_facts: yes
+#   vars:
+#     ansible_python_interpreter: /usr/local/bin/python2
 
   vars_files:
     - default.config.yml
@@ -8,12 +12,13 @@
   pre_tasks:
     - include_vars: "{{ item }}"
       with_fileglob:
-        - ../config.yml
+        - "{{ playbook_dir }}/config.yml"
       tags: ['always']
+
     - block:
       - name: Verify Ansible version.
         assert:
-          that: "ansible_version.full | version_compare('2.4', '>=')"
+          that: "ansible_version.full is version_compare('2.4', '>=')"
           msg: "You must update Ansible to at least 2.4 to use this version of Macsible."
 
       - name: Verify target system is running macOS.
@@ -23,7 +28,7 @@
 
       - name: Verify macOS version.
         assert:
-          that: "ansible_distribution_version | version_compare('10.10', '>=')"
+          that: "ansible_distribution_version is version_compare('10.10', '>=')"
           msg: "The target system must be running macOS 10.10 or higher to use this version of Macsible."
       tags: ['always']
 
